--- a/GameProject/GameProject.csproj
+++ b/GameProject/GameProject.csproj
@@ -18,7 +18,7 @@
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -26,17 +26,27 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32bit>false</Prefer32bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32bit>false</Prefer32bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="d2dlibexport, Version=1.3.1.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\unvell.D2DLib-x64.1.3.1\lib\net40\d2dlibexport.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="d2dwinform, Version=1.3.1.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\unvell.D2DLib-x64.1.3.1\lib\net40\d2dwinform.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.13.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.13.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -53,6 +63,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoreEngine\ResourceManager.cs" />
+    <Compile Include="CoreEngine\Time.cs" />
+    <Compile Include="GameGraphics\Direct2D\D2DGraphicsBitmap.cs" />
+    <Compile Include="GameGraphics\Direct2D\D2DGraphicsDevice.cs" />
+    <Compile Include="GameGraphics\IBitmap.cs" />
+    <Compile Include="GameGraphics\IGraphicsDevice.cs" />
+    <Compile Include="GameGraphics\InterpolationMode.cs" />
+    <Compile Include="GameGraphics\RenderQuadCommand.cs" />
+    <Compile Include="GameGraphics\WinForms\WinFormsBitmap.cs" />
+    <Compile Include="GameGraphics\WinForms\WinFormsGraphicsDevice.cs" />
     <Compile Include="GameInput\Keyboard.cs" />
     <Compile Include="GameInput\KeyState.cs" />
     <Compile Include="GameMath\MathF.cs" />
