--- a/GameProject/packages.config
+++ b/GameProject/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NUnit" version="3.13.1" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net472" />
+  <package id="unvell.D2DLib-x64" version="1.3.1" targetFramework="net472" />
 </packages>
