--- a/GameProject/GameProject.csproj
+++ b/GameProject/GameProject.csproj
@@ -47,6 +47,10 @@
       <HintPath>..\packages\unvell.D2DLib-x64.1.3.1\lib\net40\d2dwinform.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FarseerPhysics, Version=3.5.0.38023, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\FarseerPhysics.3.5.0\lib\NET40\FarseerPhysics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.13.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.13.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -67,8 +71,11 @@
     <Compile Include="CoreEngine\ResourceManager.cs" />
     <Compile Include="CoreEngine\Time.cs" />
     <Compile Include="Ecs\GameEntity.cs" />
-    <Compile Include="Ecs\Graphics\SpriteComponent.cs" />
+    <Compile Include="Ecs\Graphics\Sprite.cs" />
     <Compile Include="Ecs\IGameComponent.cs" />
+    <Compile Include="Ecs\Physics\BoxCollider.cs" />
+    <Compile Include="Ecs\Physics\Collider.cs" />
+    <Compile Include="Ecs\Physics\PhysicsBody.cs" />
     <Compile Include="GameGraphics\Direct2D\D2DGraphicsBitmap.cs" />
     <Compile Include="GameGraphics\Direct2D\D2DGraphicsDevice.cs" />
     <Compile Include="GameGraphics\IBitmap.cs" />
@@ -119,6 +126,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\README.md">
+      <Link>README.md</Link>
+    </Content>
     <Content Include="Resources\test.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
