--- a/GameProject/packages.config
+++ b/GameProject/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FarseerPhysics" version="3.5.0" targetFramework="net472" />
   <package id="NUnit" version="3.13.1" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net472" />
   <package id="unvell.D2DLib-x64" version="1.3.1" targetFramework="net472" />
