Separated scene creation from the window

--- a/GameProject/GameProject.csproj
+++ b/GameProject/GameProject.csproj
@@ -70,6 +70,7 @@
     <Compile Include="CoreEngine\Camera.cs" />
     <Compile Include="CoreEngine\GameScript.cs" />
     <Compile Include="CoreEngine\GameState.cs" />
+    <Compile Include="CoreEngine\ISceneFactory.cs" />
     <Compile Include="CoreEngine\ResourceManager.cs" />
     <Compile Include="CoreEngine\Time.cs" />
     <Compile Include="Ecs\GameEntity.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="GameMath\VectorTests.cs" />
     <Compile Include="GameGraphics\IRenderShape.cs" />
     <Compile Include="GameGraphics\Renderer.cs" />
+    <Compile Include="GameScripts\TestSceneFactory.cs" />
     <Compile Include="GameScripts\TestCamera.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
