--- a/GameProject/GameProject.csproj
+++ b/GameProject/GameProject.csproj
@@ -67,11 +67,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoreEngine\Awaiter.cs" />
     <Compile Include="CoreEngine\Camera.cs" />
     <Compile Include="CoreEngine\GameScript.cs" />
     <Compile Include="CoreEngine\GameState.cs" />
     <Compile Include="CoreEngine\GeometryUtility.cs" />
     <Compile Include="CoreEngine\ISceneFactory.cs" />
+    <Compile Include="CoreEngine\ResourceHandle.cs" />
     <Compile Include="CoreEngine\ResourceManager.cs" />
     <Compile Include="CoreEngine\SceneData.cs" />
     <Compile Include="CoreEngine\Time.cs" />
@@ -98,9 +100,12 @@
     <Compile Include="GameGraphics\RenderShapes\QuadRenderShape.cs" />
     <Compile Include="GameInput\Keyboard.cs" />
     <Compile Include="GameInput\KeyState.cs" />
+    <Compile Include="GameLogic\Levels\BrickWallTest.cs" />
     <Compile Include="GameLogic\Levels\GameLevel1.cs" />
-    <Compile Include="GameLogic\Levels\TestSceneFactory.cs" />
+    <Compile Include="GameLogic\Levels\SeparateBricksTest.cs" />
     <Compile Include="GameLogic\LevelUtility.cs" />
+    <Compile Include="GameLogic\Scripts\BrickWall.cs" />
+    <Compile Include="GameLogic\Scripts\PartialBrickRow.cs" />
     <Compile Include="GameLogic\Scripts\TestCamera.cs" />
     <Compile Include="GameLogic\Scripts\TestCannon.cs" />
     <Compile Include="GameMath\MathF.cs" />
@@ -148,6 +153,14 @@
     <Content Include="d2dlib64.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\bricks\bottom_brick_connection.png" />
+    <Content Include="Resources\bricks\brick.pdn" />
+    <Content Include="Resources\bricks\detached_brick.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\bricks\left_brick_connection.png" />
+    <Content Include="Resources\bricks\right_brick_connection.png" />
+    <Content Include="Resources\bricks\top_brick_connection.png" />
     <Content Include="Resources\test.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
