--- a/GameProject/GameProject.csproj
+++ b/GameProject/GameProject.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Ecs\Physics\CircleCollider.cs" />
     <Compile Include="Ecs\Physics\Collider.cs" />
     <Compile Include="Ecs\Physics\CollisionEventHandler.cs" />
+    <Compile Include="Ecs\Physics\CollisionInfo.cs" />
     <Compile Include="Ecs\Physics\PhysicsBody.cs" />
     <Compile Include="Ecs\Physics\PolygonCollider.cs" />
     <Compile Include="GameDebug\DebugDraw.cs" />
