--- a/GameProject/GameProject.csproj
+++ b/GameProject/GameProject.csproj
@@ -112,6 +112,7 @@
     <Compile Include="GameLogic\Levels\WheelTest.cs" />
     <Compile Include="GameLogic\LevelUtility.cs" />
     <Compile Include="GameLogic\Scripts\BrickWall.cs" />
+    <Compile Include="GameLogic\Scripts\NoiseAnimation.cs" />
     <Compile Include="GameLogic\Scripts\PartialBrickRow.cs" />
     <Compile Include="GameLogic\Scripts\TestCamera.cs" />
     <Compile Include="GameLogic\Scripts\TestCannon.cs" />
@@ -188,38 +189,102 @@
     <Content Include="Resources\machine_parts\wheel_holder.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\noise\noise_0.png" />
-    <Content Include="Resources\noise\noise_1.png" />
-    <Content Include="Resources\noise\noise_10.png" />
-    <Content Include="Resources\noise\noise_11.png" />
-    <Content Include="Resources\noise\noise_12.png" />
-    <Content Include="Resources\noise\noise_13.png" />
-    <Content Include="Resources\noise\noise_14.png" />
-    <Content Include="Resources\noise\noise_15.png" />
-    <Content Include="Resources\noise\noise_16.png" />
-    <Content Include="Resources\noise\noise_17.png" />
-    <Content Include="Resources\noise\noise_18.png" />
-    <Content Include="Resources\noise\noise_19.png" />
-    <Content Include="Resources\noise\noise_2.png" />
-    <Content Include="Resources\noise\noise_20.png" />
-    <Content Include="Resources\noise\noise_21.png" />
-    <Content Include="Resources\noise\noise_22.png" />
-    <Content Include="Resources\noise\noise_23.png" />
-    <Content Include="Resources\noise\noise_24.png" />
-    <Content Include="Resources\noise\noise_25.png" />
-    <Content Include="Resources\noise\noise_26.png" />
-    <Content Include="Resources\noise\noise_27.png" />
-    <Content Include="Resources\noise\noise_28.png" />
-    <Content Include="Resources\noise\noise_29.png" />
-    <Content Include="Resources\noise\noise_3.png" />
-    <Content Include="Resources\noise\noise_30.png" />
-    <Content Include="Resources\noise\noise_31.png" />
-    <Content Include="Resources\noise\noise_4.png" />
-    <Content Include="Resources\noise\noise_5.png" />
-    <Content Include="Resources\noise\noise_6.png" />
-    <Content Include="Resources\noise\noise_7.png" />
-    <Content Include="Resources\noise\noise_8.png" />
-    <Content Include="Resources\noise\noise_9.png" />
+    <Content Include="Resources\noise\noise_0.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_10.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_11.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_12.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_13.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_14.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_15.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_16.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_17.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_18.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_19.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_20.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_21.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_22.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_23.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_24.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_25.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_26.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_27.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_28.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_29.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_3.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_30.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_31.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_4.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_5.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_6.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_7.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_8.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\noise\noise_9.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\test.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
