--- a/GameProject/GameProject.csproj
+++ b/GameProject/GameProject.csproj
@@ -122,13 +122,17 @@
     <Compile Include="GameLogic\Scripts\MachineEditor.cs" />
     <Compile Include="GameLogic\Scripts\MachineMenu.cs" />
     <Compile Include="GameLogic\Scripts\MachineMenuResponse.cs" />
-    <Compile Include="GameLogic\Scripts\MachineParts\BombBoxFactory.cs" />
+    <Compile Include="GameLogic\Scripts\MachineParts\BombFactory.cs" />
     <Compile Include="GameLogic\Scripts\MachineParts\OpenWoodenPipeFactory.cs" />
+    <Compile Include="GameLogic\Scripts\MachineParts\ShellFactory.cs" />
+    <Compile Include="GameLogic\Scripts\MachineParts\ShellHummerFactory.cs" />
     <Compile Include="GameLogic\Scripts\MachineParts\SmallWheelFactory.cs" />
     <Compile Include="GameLogic\Scripts\MachineParts\WoodenBoxFactory.cs" />
     <Compile Include="GameLogic\Scripts\MachineParts\WoodenPipeFactory.cs" />
     <Compile Include="GameLogic\Scripts\NoiseAnimation.cs" />
     <Compile Include="GameLogic\Scripts\PartialBrickRow.cs" />
+    <Compile Include="GameLogic\Scripts\ShellHummerScript.cs" />
+    <Compile Include="GameLogic\Scripts\ShellScript.cs" />
     <Compile Include="GameLogic\Scripts\SiegeMachine.cs" />
     <Compile Include="GameLogic\Scripts\TestCamera.cs" />
     <Compile Include="GameLogic\Scripts\TestCannon.cs" />
@@ -206,6 +210,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\machine_parts\shell_back.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\machine_parts\shell_hammer.pdn" />
+    <Content Include="Resources\machine_parts\shell_hammer.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\machine_parts\small_wheel.png">
